samples/_failures_safe/1761283413_d4a620_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a874511.c: In function ‘main’:
./samples/SAFE/__tmp_1a874511.c:189:9: error: expected expression at end of input
  189 |         if (event ==
      |         ^~
./samples/SAFE/__tmp_1a874511.c:189:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a874511.c:189:9: error: expected declaration or statement at end of input
